--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcomo to Kokoa Talk</title>
-    <title>Welcome to Kokoa Clone</title>
+    <title>Welcome to Cocoa Talk</title>
+    <title>Welcome to Cocoa Clone</title>
   </head>
   <body>
     <div id="status-bar">
