--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to Cocoa Talk</title>
-    <title>Welcome to Cocoa </title>
+    <title>Welcome to Cffffdfsafdsfsdfasfasdfasdfocoa </title>
   </head>
   <body>
     <div id="status-bar">
