--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div id="status-bar">
     <div class="status-bar">
       <div class="status-bar__column">
-        <span>No Service</span>
+        <span>No Service
+
+          신기해서 테스트 해보는 깃허브 넷플리파이 홈페이지 구축
+        </span>
         <!-- To Do: Wifi Icon -->
         <i class="fas fa-wifi"></i>
       </div>
