--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <span>No Service
 
           신기해서 테스트 해보는 깃허브 넷플리파이 홈페이지 구축
+          두번째 시
         </span>
         <!-- To Do: Wifi Icon -->
         <i class="fas fa-wifi"></i>
